--- a/src/views/partials/header-full.ejs
+++ b/src/views/partials/header-full.ejs
@@ -2,16 +2,16 @@
     <div class="header-container">
         <div class="header-container__top">
             <div class="header-container__logo-img">
-                <img src="/imgs/logo.svg" alt="Logo" class="" />
+                <img src="/imgs/logo.svg" alt="Logo">
             </div>
             <div class="header-container__nav-top">
-                <button href="#" class="status-layer " id="homepage-btn-hf">Trang chủ</button>
+                <button href="#" class="status-layer" id="homepage-btn-hf">Trang chủ</button>
                 <button href="#" class="status-layer noti-btn-hf">Thông báo</button>
             </div>
             <div class="header-container__top-authenticator">
                 <% if (user) { %>
                 <p>Chào,</p>
-                <p class="name-click-hf"><%= user?.last_name + ' ' + user?.first_name %></p>
+                <a href="/account/information" style="text-decoration: none;"><p><%= user?.last_name + ' ' + user?.first_name %></p></a>
                 <img src="/imgs/user/<%= user?.avatar ?? 'user_1.jpg'%>" alt="avatar" class="avatar-btn-hf" />
                 <% } else { %>
                 <a href="/auth/login" style='text-decoration: none;'>
