--- a/src/public/styles/pages/booking/information.css
+++ b/src/public/styles/pages/booking/information.css
@@ -14,7 +14,7 @@
 
 .aside--wrapper {
     width: 376px;
-    height: 706px;
+    height: auto;
     display: flex;
     flex-direction: column;
     gap: 12px;
@@ -74,7 +74,7 @@ h1 {
     border: 1px solid #bec8c9;
     border-radius: 8px;
     width: 100%;
-    height: 447px;
+    height: auto;
 }
 
 .check-date,
