--- a/src/views/components/noti-item-account.ejs
+++ b/src/views/components/noti-item-account.ejs
@@ -1,5 +1,5 @@
 <div class="noti-item__block" style="background: <%= (noti.usernoti_is_read == 0) ? '#00696D1A' : 'white' %>">
-	<img src="/imgs/avatar.png" alt="img" class="noti-item__img">
+	<img src="/imgs/user/<%=user.avatar%>" alt="img" class="noti-item__img">
 	<form action="/notifications/account-update" method="POST" class="noti-item__main">
 		<input type="hidden" name="noti_id" value="<%=noti.noti_id%>">
 		<div>
@@ -21,7 +21,7 @@
 					</div>
 					<div class="popup__content-main">
 						<div class="popup__content--left">
-							<img src="/imgs/avatar.png" alt="img" class="popup__img">
+							<img src="/imgs/user/<%=user.avatar%>" alt="img" class="popup__img">
 							<div class="timeline">
 								<ul>
 									<li class="in-view"></li>
